# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  cnt_oO_xX_b.c  cnt_o_x_b.c  determ_types.c  fill_struct.c  fns_for_ddgt.c  fns_for_fl.c  ft_cnt_i_d_uU_c.c  ft_cnt_i_d_u_ua_c.c  ft_determ_argc.c  ft_determine_flgs.c  ft_f_prn_unicd.c  ft_for_pr_cC_sS.c  ft_for_pr_cca_ssa.c  ft_for_print_args.c  ft_outp_float.c  ft_print_pct.c  ft_printf.c  ft_with_flags.c  fts_f_output_dgt.c  if_flgs_oO_xX_b.c  if_flgs_o_x_b.c  init_arr.c  itoa_aA_eE_fF_gG.c  itoa_a_e_f_g.c  itoa_printf.c  itoa_printf_oO_xX_b.c  lib_printf.c  libftprintf.c  libftprintf.h  main.c  print_cC_sS.c  print_p.c  print_unicode.c
Debug/: ft_printf  makefile
inc/: libftprintf.h
libft/: Makefile  ft_itoa.c  libft.h
src/: fns_for_ddgt.c  fns_for_fl.c  ft_outp_float.c  fts_f_output_dgt.c
