cmake_minimum_required(VERSION 3.10)
project(ft_printf C)

set(CMAKE_C_STANDARD 99)

add_executable(ft_printf
        fns_for_ddgt.c
        ft_determ_argc.c
        itoa_printf_oO_xX_b.c
        libftprintf.h
        main.c
        itoa_printf.c
        libft/ft_lstcnt.c
        libft/ft_memmove.c
        libft/ft_lstmap.c
        libft/ft_strtrim.c
        libft/ft_strnstr.c
        libft/ft_memcpy.c
        libft/ft_memset.c
        libft/ft_putnbr_fd.c
        libft/ft_strclr.c
        libft/ft_toupper.c
        libft/libft.h
        libft/ft_memalloc.c
        libft/ft_strmap.c
        libft/ft_strequ.c
        libft/ft_strdup.c
        libft/ft_strsub.c
        libft/ft_strlen.c
        libft/ft_isascii.c
        libft/ft_lstnew.c
        libft/ft_strrchr.c
        libft/ft_lstiter.c
        libft/ft_strsplit.c
        libft/ft_strjoin.c
        libft/ft_putendl.c
        libft/ft_strlcat.c
        libft/ft_isdigit.c
        libft/ft_lstrvrs.c
        libft/ft_strnequ.c
        libft/ft_strcmp.c
        libft/ft_strstr.c
        libft/ft_isalpha.c
        libft/ft_memccpy.c
        libft/ft_lstaddend.c
        libft/ft_memchr.c
        libft/ft_bzero.c
        libft/ft_strncpy.c
        libft/ft_sqrt.c
        libft/ft_strmapi.c
        libft/ft_lstadd.c
        libft/ft_strncmp.c
        libft/ft_memdel.c
        libft/ft_strcat.c
        libft/ft_putstr_fd.c
        libft/ft_putnbr.c
        libft/ft_memcmp.c
        libft/ft_putchar_fd.c
        libft/ft_striter.c
        libft/ft_isprint.c
        libft/ft_striteri.c
        libft/ft_putendl_fd.c
        libft/ft_lstdel.c
        libft/ft_itoa.c
        libft/ft_strdel.c
        libft/ft_isspace.c
        libft/ft_strncat.c
        libft/ft_lstdelone.c
        libft/ft_strnew.c
        libft/ft_strcpy.c
        libft/ft_atoi.c
        libft/ft_tolower.c
        libft/ft_strchr.c
        libft/ft_putchar.c
        libft/ft_isalnum.c
        libft/ft_putstr.c
        print_p.c
        itoa_aA_eE_fF_gG.c
        print_cC_sS.c
        ft_determine_flgs.c
        ft_printf.c
        fns_for_fl.c
        lib_printf.c
        fts_f_output_dgt.c
        ft_outp_float.c
        fill_struct.c
        init_arr.c
        ft_cnt_i_d_uU_c.c
        print_unicode.c
        determ_types.c
        )